@@ -1,29 +1,28 @@
 package exercise;
 
-import java.util.HashMap;
 import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
+import com.fasterxml.jackson.databind.ObjectMapper;
+
 import java.nio.file.Files;
-import java.nio.file.Paths;
 import java.nio.file.Path;
 import java.nio.file.StandardOpenOption;
-import com.fasterxml.jackson.databind.ObjectMapper;
-// BEGIN
-import static org.assertj.core.api.Assertions.assertThat;
-// END
+import java.util.HashMap;
+import java.util.Map;
 
+import static org.assertj.core.api.Assertions.assertThat;
 
 class FileKVTest {
 
-    private static Path filepath = Paths.get("src/test/resources/file").toAbsolutePath().normalize();
+    private static Path filePath = Path.of("src/test/resources/file").toAbsolutePath().normalize();
 
     @BeforeEach
     public void beforeEach() throws Exception {
         ObjectMapper mapper = new ObjectMapper();
         String content = mapper.writeValueAsString(new HashMap<String, String>());
-        Files.writeString(filepath, content, StandardOpenOption.CREATE);
+        Files.writeString(filePath, content, StandardOpenOption.CREATE);
     }
 
-    // BEGIN
     @Test
     void fileKVTest() {
         KeyValueStorage storage = new FileKV(filePath.toString(), Map.of("key", "value"));
@@ -38,5 +37,4 @@ class FileKVTest {
         Map<String, String> data = storage.toMap();
         assertThat(data).isEqualTo(Map.of("key", "value"));
     }
-    // END
 }
